--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Progate</title>
+    <title>パン工房おおえ</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
     <div class="header">
-      <div class="header-logo">Progate</div>
+      <div class="header-logo">パン工房おおえ</div>
       <div class="header-list">
         <ul>
-          <li>プログラミングとは</li>
-          <li>学べるレッスン</li>
+          <li>商品一覧</li>
+          <li>お知らせ</li>
+          <li>店舗情報</li>
           <li>お問い合わせ</li>
         </ul>
       </div>
@@ -19,27 +20,23 @@
 
     <div class="main">
       <div class="copy-container">
-        <h1>HELLO WORLD<span>.</span></h1>
-        <h2>プログラミングの世界へようこそ</h2>
+        <h1>北野台の小さな<span>パン屋</span>です。</h1>
+        <h2>【お知らせ】2019/4/1 シュークリームはじめました</h2>
       </div>
       
       <div class="contents">
-        <h3 class="section-title">学べるレッスン</h3>
+        <h3 class="section-title">人気メニュー</h3>
         <div class="contents-item">
-          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg">
-          <p>HTML & CSS</p>
+          <img src="pan1.jpg">
+          <p>くるみパン</p>
         </div>
         <div class="contents-item">
-          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/php.svg">
-          <p>PHP</p>
+          <img src="pan2.jpg">
+          <p>ぷちパン</p>
         </div>
         <div class="contents-item">
-          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/ruby.svg">
-          <p>Ruby</p>
-        </div>
-        <div class="contents-item">
-          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/swift.svg">
-          <p>Swift</p>
+          <img src="pan3.jpg">
+          <p>りんごパン</p>
         </div>
       </div>
       
@@ -49,11 +46,11 @@
     </div>
 
     <div class="footer">
-      <div class="footer-logo">Progate</div>
+      <div class="footer-logo">パン工房おおえ</div>
       <div class="footer-list">
         <ul>
-          <li>会社概要</li>
-          <li>採用</li>
+          <li>店舗情報</li>
+          <li>アルバイト募集</li>
           <li>お問い合わせ</li>
         </ul>
       </div>
